--- a/home/.emacs.d/emacs.org
+++ b/home/.emacs.d/emacs.org
@@ -429,6 +429,7 @@ signalled."
 #+begin_src emacs-lisp
   (use-package gptel
     :ensure t
+    :mode ("\\.gptel\\'" . org-mode)
     :config
     (custom-set-faces
      '(gptel-response-fringe-highlight ((t (:inherit outline-1)))))
@@ -441,16 +442,20 @@ signalled."
             :endpoint "/v1/chat/completions"
             :stream t
             :key (lambda () (getenv "AIML_API_KEY"))
-            :models '(deepseek-chat gemini-pro gpt-4o google/gemini-3-flash-preview)))
+            :models '(deepseek-chat gemini-pro gpt-4o google/gemini-3-flash-preview openai/gpt-5-2 anthropic/claude-sonnet-4.5 x-ai/grok-4-1-fast-non-reasoning)))
     :bind (("C-c RET" . gptel-send)
            ("C-c C-k" . gptel-abort))
+    :hook (org-mode . (lambda () ;; On loading org-mode, have it check the filename and load gpt as a backup
+                      (when (and buffer-file-name
+                                 (string-match-p "\\.gptel\\'" buffer-file-name))
+                        (gptel-mode 1))))
     )
   (use-package mcp
     :ensure t
+    :defer t
     :config
     ;; Enable MCP integration with gptel
-    (setq mcp-hub-servers
-          '(("git" . (:command "mcp-server-git" :args ("-r" "~/src/aria-devops")))))
+    (load (expand-file-name "mcp.el" user-emacs-directory) t)
     (setq mcp-gptel-integration t)
     ;; Configure MCP servers if needed
     ;; (add-hook 'gptel-mode-hook 'mcp-mode))
